--- a/otus-service.yaml
+++ b/otus-service.yaml
@@ -8,5 +8,5 @@ spec:
   ports:
     - protocol: TCP
       port: 8000
-      targetPort: 80
-  type: LoadBalancer
+      targetPort: 8000
+  type: NodePort
