--- a/otus-ingress.yaml
+++ b/otus-ingress.yaml
@@ -3,21 +3,14 @@ kind: Ingress
 metadata:
   name: otus-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/rewrite-target: /$3
     kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
   - host: arch.homework
     http:
       paths:
-        - path: /otusapp/(.*)/(.*)
-          pathType: Prefix
-          backend:
-            service:
-              name: otus-luzhin-demo-service
-              port: 
-                number: 8000
-        - path: /
+        - path: /(otusapp)?(/.*/)?(.*)
           pathType: Prefix
           backend:
             service:
